Fixed min-height on filters pane to stop jumping;

--- a/app/assets/stylesheets/pages/_show.scss
+++ b/app/assets/stylesheets/pages/_show.scss
@@ -66,6 +66,7 @@
   padding: 1.5rem 1rem 0.5rem;
   overflow: scroll;
   height: 200;
+  min-height: 4.8rem;
 }
 
 .show-page-filters-sql-container {
@@ -87,7 +88,6 @@
 .show-page-filter-pills-container {
   display: flex;
   flex-wrap: wrap;
-  padding: 0.5rem 0rem;
 }
 
 .show-page-filter-pill {
